<resources>
    <string name="app_name">Small Steps</string>
    <string name="sponsor">Sponsor</string>
    <string name="tasks">Tasks</string>
    <string name="pieces">Pieces</string>
    <string name="achievements">Achievements</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="meetings">Meetings</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main5">Main5Activity</string>
    <string name="login">Login</string>
    <string name="submit">submit</string>
</resources>
